2002-07-20  Guillaume Pierronnet <moumar@netcourrier.com>

	* src/rbgtkpacker.c: Add file. Support Gtk::Packer.
	* src/rbgtk.c, rbgtk.h, rbgtkconst.c, rbgtkcontainer.c:
	Support Gtk::Packer.
	* src/rbgtkentry.c: Gtk::Entry.new() accept a "max_length"
	as optionnal argument.

2002-07-10  Alex Boussinet <dbug@wanadoo.fr>

	* src/rbgtksocket.c: Add Gtk::Socket#xwindow.
	* sample/t-gtkplug.rb, sample/t-gtksocket.rb:
	Add sample for Gtk::Socket, Gtk::Plug.

2002-07-07  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkim.c: Remove file.
	* src/rbgtk.h: Fix compile error for rbgdkfont.c(#ifdef GTK_DISABLE_DEPRECATED was wrong)
	* src/rbgdkcolormap.c: Remove Gdk::Colormap#alloc.

2002-07-07  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkvisual.c, src/rbgdkcolormap.c:File divide from rbgdkcolor.c.
	* src/rbgdkvisual.c, src/rbgdkcolormap.c, src/rbgdkdnd.c:
	Support GOBJ2RVAL/RVAL2GOBJ
	(Though Gdk::Visual, Gdk::Colormap, Gdk::DragContext is not descendant
	of Glib::GObject).
	* src/rbgdkrgb.c, src/rbgdkvisual.c, src/rbgdkdnd.c: 
	Change get_hoge to hoge.
	* src/rbgdkcolormap.c, src/rbgdkdnd.c: Change "new" to "initialize"
	* src/rbgdkdnd.c: Remove Gdk::DragContext::Constants.
	* src/*.c: Change make_gdkvisual/cmap/dragcontext to GOBJ2RVAL(), 
	get_gdkvisual/cmap/dragcontext, to RVAL2GOBJ()
	* src/rbgdkfont.c, src/rbgdkdraw.c, src/rbgdkgc.c, 
	src/rbgdkim.c, src/rbgdkgc.c, src/rbgtk.h, src/rbgtk.c, 
	src/rbgtkfontselection.c, src/rbgtkfontselectiondialog.c, 
	src/rbgtkobject.c, src/rbgtktext.c: Add GTK_DISABLE_DEPRECATED macro.
	
2002-07-04  WATANABE Hirofumi <eban@os.rim.or.jp>
	
   	* extconf.rb, src/rbgtk.h: Fix for Win32.

2002-07-02  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkwindow.c: Bugfix of Gdk::Window#property_change(), 
	Gdk::Window#colormap(Reported by WATANABE Hirofumi).

2002-06-24  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkpixmap.c: Change RBGTK_INITIALIZE to RBGOBJ_INITIALIZE.